--- a/static/style.css
+++ b/static/style.css
@@ -25,13 +25,15 @@ body {
 
 .user-basic {
     display: flex;
-    width: 30%;
+    width: 15%;
     height: 30%;
     border-radius: 30px;
     background: bisque;
     border: 1px solid bisque;
     font-size: 1em;
-
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .wrapper-login {
