--- a/static/style.css
+++ b/static/style.css
@@ -17,13 +17,24 @@ body {
     min-height: 100vh;
 }
 
+.background-svg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-color: bisque;
+}
+
 .nav {
     display: flex;
     width: 20%;
     font-size: 1em;
 }
 
-.user-basic {
+.user-basic,
+.user-xps {
     display: flex;
     width: 15%;
     height: 30%;
