--- a/static/style.css
+++ b/static/style.css
@@ -3,7 +3,7 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
     font-family: "Poppins", sans-serif;
 }
 
@@ -15,6 +15,7 @@ body {
     align-items: center;
     justify-content: center;
     min-height: 100vh;
+    position: relative;
 }
 
 .background-svg {
@@ -26,6 +27,7 @@ body {
     z-index: -1;
     background-color: bisque;
 }
+
 
 .nav {
     display: flex;
