--- a/static/style.css
+++ b/static/style.css
@@ -3,7 +3,6 @@
 * {
     margin: 0;
     padding: 0;
-    /* box-sizing: border-box; */
     font-family: "Poppins", sans-serif;
 }
 
@@ -15,7 +14,6 @@ body {
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    position: relative;
 }
 
 .background-svg {
@@ -30,26 +28,39 @@ body {
 
 .nav {
     display: flex;
+    position: absolute;
+    top: 10%;
+    left: 10%;
     width: 20%;
     font-size: 1em;
 }
 
-.user-basic,
-.user-xps {
+.user {
     display: flex;
-    width: 15%;
+    width: 20%;
     height: 30%;
     border-radius: 30px;
-    background: rgb(155, 209, 203);
     border: 1px solid bisque;
     font-size: 1em;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-left: 10%;
+}
+
+.user-basic,
+.user-xps {
+    background: rgb(155, 209, 203);
+    border-radius: 30px;
+    padding: 10px;
+    margin: 0 5px;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .wrapper-login {
-
     background: transparent;
     border-radius: 20px;
     padding: 0px 30px;
